--- a/PS5/18.100A_ps5.tex
+++ b/PS5/18.100A_ps5.tex
@@ -131,5 +131,19 @@ so $\inf \{x_k \;|\; k\geq n\}=1$. Therefore, we conclude also that $\liminf x_n
 	\end{equation}
 	and we are done.
 \end{proof}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 4}
+\subsection*{(a)}
+\begin{proof}
+	Since $\{x_n\}_n$ and $\{y_n\}_n$ are bounded sequences, then $\exists B_0 \geq 0$ and $B_1 \geq 0$ such that $\forall n \in \mathbb{N}$, $|x_n| \leq B_0$ and $|y_n| \leq B_1$.
+	
+	Choose $B = B_0 + B_1$. Then by the triangle inequality,
+	\begin{equation}
+		|x_n + y_n| \leq |x_n| + |y_n| \leq B_0 + B_1 = B.
+	\end{equation}
+	Therefore, the sequence $\{x_n + y_n\}_n$ is bounded.
+\end{proof}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
