--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -25,6 +25,16 @@
 \maketitle
 	
 \section*{Problem 1}
-TODO TODO TODO 
+\subsection*{(a)}
+\begin{align}
+	\sum_{n=1}^{\infty} \frac{3}{9n+1} &= 3\sum_{n=1}^{\infty} \frac{1}{9n+1} \\
+	&= \frac{1}{3}\sum_{n=1}^{\infty}\frac{1}{n+\frac{1}{9}} \\
+	&= \frac{1}{3}\sum_{n=2}^{\infty}\frac{1}{(n-1)+\frac{1}{9}} \\
+	&= \frac{1}{3}\sum_{n=2}^{\infty} \frac{1}{n-\frac{8}{9}} \\
+	&> \sum_{n=2}^{\infty} \frac{1}{n}.
+\end{align}
+But the Harmonic series, $\sum_n \frac{1}{n}$, diverges.
+
+Therefore, we conclude by comparison that the series $\sum_n \frac{3}{9n+1}$ diverges.
 	
 \end{document}
