--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -36,5 +36,11 @@
 But the Harmonic series, $\sum_n \frac{1}{n}$, diverges.
 
 Therefore, we conclude by comparison that the series $\sum_n \frac{3}{9n+1}$ diverges.
-	
+
+\subsection*{(b)}
+\begin{equation}
+	\sum_{n=1}^{\infty}\frac{1}{2n-1} = \frac{1}{2}\sum_{n=1}^{\infty}\frac{1}{n-\frac{1}{2}} > \frac{1}{2}\sum_{n=1}^{\infty}\frac{1}{n}.
+\end{equation}
+Therefore, by comparison, $\sum_n \frac{1}{2n-1}$ diverges.
+
 \end{document}
