--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -43,4 +43,12 @@ Therefore, we conclude by comparison that the series $\sum_n \frac{3}{9n+1}$ div
 \end{equation}
 Therefore, by comparison, $\sum_n \frac{1}{2n-1}$ diverges.
 
+\subsection*{(c)}
+\begin{equation}
+	\sum_{n=1}^{\infty} \frac{(-1)^n}{n^2} = \sum_{k=1}^{\infty}\frac{1}{(2k)^2} - \sum_{k=1}^{\infty}\frac{1}{(2k+1)^2},
+\end{equation}
+which is the difference of two convergent series. 
+
+Therefore, $\sum_n \frac{(-1)^n}{n^2}$ converges.
+
 \end{document}
