--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -51,4 +51,13 @@ which is the difference of two convergent series.
 
 Therefore, $\sum_n \frac{(-1)^n}{n^2}$ converges.
 
+\subsection*{(d)}
+We can express the series $\sum_n \frac{1}{n(n+1)}$ as a telescoping sum:
+\begin{align}
+	\sum_{n=1}^{\infty}\frac{1}{n(n+1)} &= \sum_{n=1}^{\infty} \frac{1}{n} - \sum_{n=1}^{\infty}\frac{1}{n+1} \\
+	&= \left(1-\frac{1}{2}\right) + \left(\frac{1}{2} - \frac{1}{3}\right) + \left(\frac{1}{3} - \frac{1}{4}\right) + \cdots \\
+	&= 1.
+\end{align}
+Therefore, $\sum_n \frac{1}{n(n+1)}$ converges to $1$.
+
 \end{document}
