--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -131,4 +131,16 @@ Therefore, the converse to \textbf{(a)} does not always hold.
 	as desired.
 \end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 4}
+\subsection*{(a)}
+Using the sum of a geometric series, we have
+\begin{align}
+	\sum_{n=1}^{\infty} \frac{1}{2^{2n+1}} &= \frac{1}{2}\sum_{n=1}^{\infty}\frac{1}{2^{2n}} \\
+	&= \frac{1}{2} \sum_{n=1}^{\infty}\left(\frac{1}{4}\right)^n \\
+	&= \frac{1}{2} \cdot \frac{1}{1-\frac{1}{4}} \\
+	&= \frac{1}{2} \cdot \frac{4}{3}.
+\end{align}
+Therefore, $\sum_n \left(\frac{1}{2}\right)^{2n+1}$ converges to $\frac{2}{3}$.
+
+
 \end{document}
