--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -142,5 +142,9 @@ Using the sum of a geometric series, we have
 \end{align}
 Therefore, $\sum_n \left(\frac{1}{2}\right)^{2n+1}$ converges to $\frac{2}{3}$.
 
+\subsection*{(b)}
+Let $x_n = \frac{(-1)^n(n-1)}{n}$. Then we easily check that $\lim_{n\to\infty}x_n \neq 0$, since the non-alternating component approaches $1$, but then alternates between $-1$ and $1$; i.e. the limit does not exist. 
+
+Therefore, $\sum_n  \frac{(-1)^n(n-1)}{n}$ diverges.
 
 \end{document}
