--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -147,4 +147,13 @@ Let $x_n = \frac{(-1)^n(n-1)}{n}$. Then we easily check that $\lim_{n\to\infty}x
 
 Therefore, $\sum_n  \frac{(-1)^n(n-1)}{n}$ diverges.
 
+\subsection*{(c)}
+Note that since $n^{\frac{1}{10}} \leq n$ $\forall n \in \mathbb{N}$, we have
+\begin{equation}
+	\sum_{n=1}^{\infty} \frac{(-1)^n}{n^{\frac{1}{10}}} \geq \sum_{n=1}^{\infty} \frac{(-1)^n}{n},
+\end{equation}
+which diverges.
+
+Therefore, $\sum_n \frac{(-1)^n}{n^{\frac{1}{10}}}$ diverges by comparison.
+
 \end{document}
