--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -133,7 +133,7 @@ Therefore, the converse to \textbf{(a)} does not always hold.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Problem 4}
 \subsection*{(a)}
-Using the sum of a geometric series, we have
+Using the sum of a geometric sequence, we have
 \begin{align}
 	\sum_{n=1}^{\infty} \frac{1}{2^{2n+1}} &= \frac{1}{2}\sum_{n=1}^{\infty}\frac{1}{2^{2n}} \\
 	&= \frac{1}{2} \sum_{n=1}^{\infty}\left(\frac{1}{4}\right)^n \\
@@ -155,5 +155,21 @@ Note that since $n^{\frac{1}{10}} \leq n$ $\forall n \in \mathbb{N}$, we have
 which diverges.
 
 Therefore, $\sum_n \frac{(-1)^n}{n^{\frac{1}{10}}}$ diverges by comparison.
+
+\subsection*{(d)}
+We have
+\begin{align}
+	\sum_{n=1}^{\infty} \frac{n^n}{(n+1)^{2n}} &= \sum_{n=1}^{\infty} \frac{n^n}{(n^2 + 2n + 1)^n} \\
+	&= \sum_{n=1}^{\infty}\left(\frac{n}{n^2 + 2n + 1}\right)^n.
+\end{align}
+We also have that $\forall n \in \mathbb{N}$,
+\begin{equation}
+	\left|\frac{n}{n^2 + 2n + 1}\right| < \frac{1}{4} < 1.
+\end{equation}
+Then the series is upper bounded by a geometric series:
+\begin{equation}
+	\sum_{n=1}^{\infty} \frac{n^n}{(n+1)^{2n}} < \sum_{n=1}^{\infty} \left(\frac{1}{4}\right)^n = \frac{4}{3}.
+\end{equation}
+Therefore, $\sum_n \frac{n^n}{(n+1)^{2n}}$ converges.
 
 \end{document}
