--- a/PS6/18.100A_ps6.tex
+++ b/PS6/18.100A_ps6.tex
@@ -171,5 +171,12 @@ Then the series is upper bounded by a geometric series:
 	\sum_{n=1}^{\infty} \frac{n^n}{(n+1)^{2n}} < \sum_{n=1}^{\infty} \left(\frac{1}{4}\right)^n = \frac{4}{3}.
 \end{equation}
 Therefore, $\sum_n \frac{n^n}{(n+1)^{2n}}$ converges.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 5}
+Let $x_n = \frac{(-1)^n}{\sqrt{n}}$. Then $x_n^2 = \frac{1}{n}$. 
+
+Since $\{\frac{1}{n}\}_n$ is decreasing and $\lim_{n\to\infty} x_n = 0$, then $\sum_n \frac{(-1)^n}{\sqrt{n}}$ converges. But the harmonic series $\sum_n \frac{1}{n}$ diverges.
+
+Therefore, $\sum_n x_n$ converges, but $\sum_n x_n^2$ diverges.
 
 \end{document}
