--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -56,5 +56,12 @@ Thus,
 Therefore by equations \eqref{1a-1} and \eqref{1a-2}, $f^{-1}(C \cap D) = f^{-1}(C) \cap f^{-1}(D)$.
 \end{proof}
 
+\subsection*{(b)}
+\textbf{Claim}: If $E \subset \R$ is countable, then the complement $\R\backslash E$ is always uncountable.
+\begin{proof}
+	(By contradiction). Suppose $E^c$ is countable. Then $E \cup E^c$ is countable as well, since it is the union of two countable sets. But $E \cup E^c = \R$, which is uncountable. $(\Rightarrow\Leftarrow)$.
+\end{proof}
+
+
 \end{document}
 	
