--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -62,6 +62,7 @@ Therefore by equations \eqref{1a-1} and \eqref{1a-2}, $f^{-1}(C \cap D) = f^{-1}
 	(By contradiction). Suppose $E^c$ is countable. Then $E \cup E^c$ is countable as well, since it is the union of two countable sets. But $E \cup E^c = \R$, which is uncountable. $(\Rightarrow\Leftarrow)$.
 \end{proof}
 
-
+\subsection*{(c)}
+By contrast, if $E \subset \R$ is uncountable, then the complement $\R \backslash E$ is not always countable. Take for instance, $E = [0 , 1]$, which is uncountable. Then \\$E^c = (-\infty, 0) \cup (0, \infty)$, which is also uncountable.
 \end{document}
 	
