--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -64,5 +64,9 @@ Therefore by equations \eqref{1a-1} and \eqref{1a-2}, $f^{-1}(C \cap D) = f^{-1}
 
 \subsection*{(c)}
 By contrast, if $E \subset \R$ is uncountable, then the complement $\R \backslash E$ is not always countable. Take for instance, $E = [0 , 1]$, which is uncountable. Then \\$E^c = (-\infty, 0) \cup (0, \infty)$, which is also uncountable.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 2}
+\subsection*{(a)}
+A set $U \subset \R$ is \textit{not open} if for every $\epsilon > 0$, $\exists x \in U$ such that \\$(x-\epsilon, x+\epsilon) \not\subset \R$.
 \end{document}
 	
