--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -63,10 +63,27 @@ Therefore by equations \eqref{1a-1} and \eqref{1a-2}, $f^{-1}(C \cap D) = f^{-1}
 \end{proof}
 
 \subsection*{(c)}
-By contrast, if $E \subset \R$ is uncountable, then the complement $\R \backslash E$ is not always countable. Take for instance, $E = [0 , 1]$, which is uncountable. Then \\$E^c = (-\infty, 0) \cup (0, \infty)$, which is also uncountable.
+By contrast, if $E \subset \R$ is uncountable, then the complement $\R \backslash E$ is not always countable. Take for instance, $E = [0 , 1]$, which is uncountable. Then \\$E^c = (-\infty, 0) \cup (1, \infty)$, which is also uncountable.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Problem 2}
 \subsection*{(a)}
 A set $U \subset \R$ is \textit{not open} if for every $\epsilon > 0$, $\exists x \in U$ such that \\$(x-\epsilon, x+\epsilon) \not\subset \R$.
+
+\subsection*{(b)}
+\begin{proof}
+	Suppose $U$ is not open. Let $\epsilon = \frac{1}{n}$. Then for every $n \in \N$, $\exists x \in U$ such that $(x-\frac{1}{n}, x + \frac{1}{n}) \not \subset U$. Equivalently, for each $n \in \N$ $\exists x_n \in U^c$ such that
+	\begin{equation}
+		x - \frac{1}{n} < x_n < x + \frac{1}{n}.
+	\end{equation}
+	Then we have
+	\begin{equation}
+		0 < |x_n - x| < \frac{1}{n},
+	\end{equation}
+	and taking the limit on all sides gives
+	\begin{equation}
+		0 < \lim_{n \to \infty} |x_n - x| < \lim_{n \to \infty} \frac{1}{n}.
+	\end{equation}
+	Thus, by the squeeze theorem, $\lim_{n \to \infty} x_n = x$, as desired.
+\end{proof}
 \end{document}
 	
