--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -85,5 +85,10 @@ A set $U \subset \R$ is \textit{not open} if for every $\epsilon > 0$, $\exists 
 	\end{equation}
 	Thus, by the squeeze theorem, $\lim_{n \to \infty} x_n = x$, as desired.
 \end{proof}
+
+\subsection*{(c)}
+\begin{proof}
+	(By contradiction). To show that $F$ is closed, we must show that $F^c$ is open. Suppose, toward a contradiction, that $F^c$ is not open. Then by part \textbf{(b)}, $\exists x \in F^c$ and a sequence $\{x_n\}_n$ of elements of $F$ such that $\lim_{n\to\infty} x_n = x$. But by assumption, every convergent sequence of elements of $F$ has a limit in $F$, i.e. we assumed originally that $x \in F$ $(\Rightarrow\Leftarrow)$. Thus, $F^c$ must be open, so $F$ is closed.
+\end{proof}
 \end{document}
 	
