--- a/midterm/18.100A_midterm.tex
+++ b/midterm/18.100A_midterm.tex
@@ -104,5 +104,28 @@ A set $U \subset \R$ is \textit{not open} if for every $\epsilon > 0$, $\exists 
 	\end{align}
 	Therefore, $\lim_{n \to \infty} \left|\frac{10n^2}{n^2 + 16n + 1}\right| = 10$.
 \end{proof}
+
+\subsection*{(b)}
+(i) Let $x_n = \frac{(-1)^n}{n}$. Then $\lim_{n \to \infty} x_n = 0$. But $x_1 = -1 < \frac{1}{2} = x_2$, whereas $x_2 = \frac{1}{2} > -\frac{1}{3} = x_3$. 
+
+Therefore $\{x_n\}_n$ converges to $0$, but is not monotonic.
+
+(ii) Let 
+\begin{equation}
+	x_n = \begin{cases}
+		0, \quad n \textrm{ even} \\
+		n, \quad n \textrm{ odd}
+	\end{cases}.
+\end{equation}
+Then $\{x_n\}_n$ is clearly unbounded.
+
+Consider the subsequence $\{x_{n_k}\}_k$ defined by $x_{n_k} = x_{2k}$ for each $k \in \N$. Then $\forall k$, $x_{n_k} = 0$.
+
+Therefore, $\{x_n\}_n$ is unbounded, but $\{x_{n_k}\}_k$ converges to $0$. 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 4}
+\subsection*{(a)}
+TODO TODO
+
 \end{document}
 	
