--- a/PS7/18.100A_ps7.tex
+++ b/PS7/18.100A_ps7.tex
@@ -41,7 +41,18 @@
 	\end{align}
 	Thus $\sum_n |c_n|$ is bounded above and monotone, so it converges.
 \end{proof}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 2}
+\subsection*{(a)}
+Let $a_n = 2^n x^n$. Then $\left|\frac{a_{n+1}}{a_n}\right| = \left|\frac{2^{n+1}x^{n+1}}{2^n x^n}\right| = 2 |x|$.
 
-	
+By the ratio test, we must have
+\begin{equation}
+	L = \lim_{n \to \infty} 2 |x| < 1.
+\end{equation}
+Thus, $\sum_{n=0}^{\infty} 2^n x^n$ converges for all $|x| < \frac{1}{2}$.
+
+\subsection*{(b)}
+TODO TODO
+
 \end{document}
