--- a/PS7/18.100A_ps7.tex
+++ b/PS7/18.100A_ps7.tex
@@ -53,6 +53,12 @@ By the ratio test, we must have
 Thus, $\sum_{n=0}^{\infty} 2^n x^n$ converges for all $|x| < \frac{1}{2}$.
 
 \subsection*{(b)}
-TODO TODO
+We have $a_n = n x^n$, so $\left|\frac{a_{n+1}}{a_n}\right| = \left|\frac{(n+1)x^{n+1}}{nx^n}\right| = \frac{n+1}{n}|x|$.
+
+Thus, we require
+\begin{equation}
+	\lim_{n \to \infty} \frac{n+1}{n}|x| < 1.
+\end{equation}
+Therefore, $\sum_n n x^n$ converges for all $|x| < 1$. 
 
 \end{document}
